more tweeks to collapsing removed grey bar via css fixed loading to only say loading

--- a/src/main/resources/META-INF/web-resources/stylesheets/todo.css
+++ b/src/main/resources/META-INF/web-resources/stylesheets/todo.css
@@ -66,5 +66,10 @@ ul {
   	position: relative;
   	z-index: 2;
   	top: 250px;
+  	color: #066cff;
   	/* left: 500px; */
+  }
+
+  .image-all-width {
+  	width:100%;
   }
